@@ -1,11 +1,12 @@
 1.8.3 => 1.8.4
 =================
 New features
+    Appointments can now be grouped into HL7 care episodes (#306)
     New before answering and after completion events synchronize track fields with code the same as answer codes
     More options for appointments to create a track (#294)
 Interface improvements:
     Added token states incomplete and partially answered (#280)
-    Answers of partially answered tokens can be seen
+    Answers of partially answered tokens can be seen (#280)
     Token status is shown in show token screen
 Programmability
     Projects can allow organizations to look into each others tokens and tracks (#300)
